feat:添加折叠面板组件

--- a/views/index.html
+++ b/views/index.html
@@ -12,35 +12,18 @@
 <body>
     <h1 class="title">前端组件集合</h1>
     <div class="container">
-        <a href="/backtop">
-            回到顶部组件(移动+PC)
-        </a>
-        <a href="/slider">
-            图片轮播(移动版)
-        </a>
-        <a href="/carousel">
-            图片轮播(PC版)
-        </a>
-        <a href="/select">
-            选择地区组件(PC版)
-        </a>
-        <a href="/fullpage">
-            全屏轮动组件(PC版)
-        </a>
-        <a href="/lazyload">
-            图片懒加载组件(PC+移动)
-        </a>
-        <a href="/datepicker">
-            日期选择组件(PC版)
-        </a>
-        <a href="/upload">
-            图片上传组件（PC+移动）
-        </a>
-        <a href="/dialog">
-            弹框组件（移动版）
-        </a>
+        <a href="/backtop">回到顶部组件(移动+PC)</a>
+        <a href="/slider">图片轮播(移动版)</a>
+        <a href="/carousel">图片轮播(PC版)</a>
+        <a href="/select">选择地区组件(PC版)</a>
+        <a href="/fullpage">全屏轮动组件(PC版)</a>
+        <a href="/lazyload">图片懒加载组件(PC+移动)</a>
+        <a href="/datepicker">日期选择组件(PC版)</a>
+        <a href="/upload">图片上传组件（PC+移动）</a>
+        <a href="/dialog">弹框组件（移动版）</a>
         <a href="/ripple">水波纹效果</a>
         <a href="/pcDialog">弹框组件（PC版）</a>
+        <a href="/collapse">折叠面板组件</a>
     </div>
 </body>
 </html>
